--- a/style.css
+++ b/style.css
@@ -126,10 +126,11 @@ header div{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 130px;
 }
 
 .watch_content {
-    background-image: url('./images/watch.png');
+    background: url('./images/watch.png'), url('./images/gradient2.png');
     background-repeat: no-repeat;
     background-position: center;
     width: 50%;
@@ -137,6 +138,28 @@ header div{
     padding: 60px;
     text-align: left;
     border-radius: 5px;
+    position: relative;
+    z-index: 1;
+}
+
+.watch_content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to right, rgba(214, 18, 18, 0.5), transparent),
+    url('./images/gradient2.png') center no-repeat;
+    mix-blend-mode: multiply;
+    border-radius: 5px;
+    z-index: -1;
+}
+
+.watch_content h1,
+.watch_content button {
+    position: relative;
+    z-index: 2;
 }
 
 .watch_content h1 {
@@ -160,6 +183,79 @@ header div{
     font-size: 20px;
     font-weight: 500;
     padding: 21px;
+}
+
+/* Footer section  */
+Footer{
+    background-color: black;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 130px 230px;
+    /* gap: 331px; */
+}
+
+.future{
+    width: 485px;
+    height: 317px;
+}
+
+.future h1{
+    font-size: 45px;
+    font-weight: 700;
+    color: white;
+    margin-bottom: 16px;
+}
+
+.future_p{
+    font-size: 16px;
+    color: white;
+}
+
+.description{
+    margin-bottom: 24px;
+}
+
+.contact{
+    margin-bottom: 16px;
+}
+
+.future img{
+    margin-right: 17px;
+}
+
+.subscribe{
+    width: 325px;
+    height: 204px;
+}
+
+.subscribe h1{
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 31px;
+    color: white;
+}
+.subscribe input{
+    border: none;
+    border: 1px solid white;
+    border-radius: 5px;
+    color: white;
+    background-color: black;
+    padding: 20px;
+    margin-bottom: 16px;
+    width: 100%;
+}
+
+.subscribe button{
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 20px;
+    font-size: 20px;
+    color: #F15B22;
+    font-weight: 500;
+    /* width: 170px; */
+    height: 64px;
 }
 
 
